Add navbar feature

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 
 <body>
     <h1>Welcome to out chat app</h1>
+    <nav>
+        <ul>
+            <li>Home </li>
+            <li>About</li>
+            <li>Contact</li>
+            <li>Policy</li>
+        </ul>
+    </nav>
 </body>
 
 </html>
