Add navbar tab feature

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li>About</li>
             <li>Contact</li>
             <li>Policy</li>
+            <li>New tab</li>
         </ul>
     </nav>
 </body>
