--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 <body>
     <h1>Welcome to out chat app</h1>
+    <h1>Welcome to out chat app</h1>
+    <h1>Welcome to out chat app</h1>
 </body>
 
 </html>
